--- a/style.css
+++ b/style.css
@@ -36,10 +36,16 @@ section#main-card {
 .text-first {
     font-size: 18px;
     font-weight: 700;
+    margin-bottom: 4px;
 }
 
 .text-gray {
     color: var(--dark-gray);
+    font-size: 14px;
+}
+
+.stats .text-gray {
+    font-size: 10px;
 }
 
 /* Card */
@@ -54,7 +60,7 @@ section#main-card {
     width: 326px;
     height: 374px;
     display: grid;
-    grid-template-rows: 188px auto auto ;
+    grid-template-rows: 195px auto auto ;
     grid-template-columns: 1fr;
 }
 
@@ -71,6 +77,7 @@ section#main-card {
 
 .card .info-profil {
     text-align: center;
+    padding-top: 12px;
 }
 
 
@@ -80,6 +87,7 @@ section#main-card {
     grid-template-columns: repeat(3, 33%);
     grid-template-rows: 1fr;
     text-align: center;
+    align-self: center;
 }
 
 /* 
