--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ section#main-card {
     width: 326px;
     height: 374px;
     display: grid;
-    grid-template-rows: 195px auto auto ;
+    grid-template-rows: 192px auto 88px ;
     grid-template-columns: 1fr;
 }
 
@@ -77,7 +77,7 @@ section#main-card {
 
 .card .info-profil {
     text-align: center;
-    padding-top: 12px;
+    padding-top: 8px;
 }
 
 
@@ -88,6 +88,7 @@ section#main-card {
     grid-template-rows: 1fr;
     text-align: center;
     align-self: center;
+    align-items: stretch;
 }
 
 /* 
